@@ -20,8 +20,8 @@ import org.elasticsearch.packaging.util.ServerUtils;
 import org.elasticsearch.packaging.util.Shell;
 import org.elasticsearch.packaging.util.Shell.Result;
 import org.elasticsearch.packaging.util.docker.DockerRun;
+import org.elasticsearch.packaging.util.docker.DockerShell;
 import org.elasticsearch.packaging.util.docker.MockServer;
-import org.hamcrest.Matcher;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.BeforeClass;
@@ -35,7 +35,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.StringJoiner;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -62,6 +61,7 @@ import static org.elasticsearch.packaging.util.docker.Docker.getImageLabels;
 import static org.elasticsearch.packaging.util.docker.Docker.getJson;
 import static org.elasticsearch.packaging.util.docker.Docker.listContents;
 import static org.elasticsearch.packaging.util.docker.Docker.mkDirWithPrivilegeEscalation;
+import static org.elasticsearch.packaging.util.docker.Docker.readinessProbe;
 import static org.elasticsearch.packaging.util.docker.Docker.removeContainer;
 import static org.elasticsearch.packaging.util.docker.Docker.restartContainer;
 import static org.elasticsearch.packaging.util.docker.Docker.rmDirWithPrivilegeEscalation;
@@ -71,11 +71,11 @@ import static org.elasticsearch.packaging.util.docker.Docker.verifyContainerInst
 import static org.elasticsearch.packaging.util.docker.Docker.waitForElasticsearch;
 import static org.elasticsearch.packaging.util.docker.DockerFileMatcher.file;
 import static org.elasticsearch.packaging.util.docker.DockerRun.builder;
-import static org.hamcrest.Matchers.allOf;
 import static org.hamcrest.Matchers.arrayContaining;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.emptyString;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasEntry;
@@ -147,7 +147,9 @@ public class DockerTests extends PackagingTestCase {
      */
     public void test012SecurityCanBeDisabled() throws Exception {
         // restart container with security disabled
-        runContainer(distribution(), builder().envVar("xpack.security.enabled", "false"));
+        // We need to set discovery to single-node as with security disabled, autoconfiguration won't run and we won't set
+        // cluster.initial_master_nodes
+        runContainer(distribution(), builder().envVar("xpack.security.enabled", "false").envVar("discovery.type", "single-node"));
         waitForElasticsearch(installation);
         final int unauthStatusCode = ServerUtils.makeRequestAndGetStatus(Request.Get("http://localhost:9200"), null, null, null);
         assertThat(unauthStatusCode, equalTo(200));
@@ -165,32 +167,13 @@ public class DockerTests extends PackagingTestCase {
         final Installation.Executables bin = installation.executables();
         final Result r = sh.run(bin.pluginTool + " list");
 
-        assertThat("Expected no plugins to be listed", r.stdout, emptyString());
-    }
-
-    /**
-     * Check that Cloud images bundle a selection of plugins.
-     */
-    public void test021PluginsListWithDefaultCloudPlugins() {
-        assumeTrue(
-            "Only applies to Cloud images",
-            distribution.packaging == Packaging.DOCKER_CLOUD || distribution().packaging == Packaging.DOCKER_CLOUD_ESS
-        );
-
-        final Installation.Executables bin = installation.executables();
-        final List<String> plugins = sh.run(bin.pluginTool + " list").stdout.lines().collect(Collectors.toList());
-
-        assertThat(
-            "Expected standard plugins to be listed",
-            plugins,
-            equalTo(List.of("repository-azure", "repository-gcs", "repository-s3"))
-        );
+        assertThat("Expected no plugins to be listed", r.stdout(), emptyString());
     }
 
     /**
      * Check that a plugin can be installed without special permissions.
      */
-    public void test022InstallPlugin() {
+    public void test021InstallPlugin() {
         runContainer(
             distribution(),
             builder().envVar("ELASTIC_PASSWORD", PASSWORD).volume(Path.of(EXAMPLE_PLUGIN_PATH), "/analysis-icu.zip")
@@ -202,20 +185,13 @@ public class DockerTests extends PackagingTestCase {
         final Installation.Executables bin = installation.executables();
         sh.run(bin.pluginTool + " install file:///analysis-icu.zip");
 
-        final boolean isCloudImage = distribution().packaging == Packaging.DOCKER_CLOUD
-            || distribution().packaging == Packaging.DOCKER_CLOUD_ESS;
-
-        final Matcher<Iterable<?>> matcher = isCloudImage
-            ? containsInAnyOrder("repository-azure", "repository-gcs", "repository-s3", "analysis-icu")
-            : equalTo(List.of("analysis-icu"));
-
-        assertThat("Expected installed plugins to be listed", listPlugins(), matcher);
+        assertThat("Expected installed plugins to be listed", listPlugins(), equalTo(List.of("analysis-icu")));
     }
 
     /**
      * Checks that ESS images can install plugins from the local archive.
      */
-    public void test023InstallPluginsFromLocalArchive() {
+    public void test022InstallPluginsFromLocalArchive() {
         assumeTrue("Only ESS images have a local archive", distribution().packaging == Packaging.DOCKER_CLOUD_ESS);
 
         final String plugin = "analysis-icu";
@@ -225,7 +201,10 @@ public class DockerTests extends PackagingTestCase {
 
         // Stuff the proxy settings with garbage, so any attempt to go out to the internet would fail
         sh.getEnv()
-            .put("ES_JAVA_OPTS", "-Dhttp.proxyHost=example.org -Dhttp.proxyPort=9999 -Dhttps.proxyHost=example.org -Dhttps.proxyPort=9999");
+            .put(
+                "CLI_JAVA_OPTS",
+                "-Dhttp.proxyHost=example.org -Dhttp.proxyPort=9999 -Dhttps.proxyHost=example.org -Dhttps.proxyPort=9999"
+            );
         sh.run(bin.pluginTool + " install --batch analysis-icu");
 
         assertThat("Expected " + plugin + " to be installed", listPlugins(), hasItems(plugin));
@@ -234,22 +213,13 @@ public class DockerTests extends PackagingTestCase {
     /**
      * Checks that plugins can be installed by deploying a plugins config file.
      */
-    public void test024InstallPluginUsingConfigFile() {
-        final boolean isCloudImage = distribution().packaging == Packaging.DOCKER_CLOUD
-            || distribution().packaging == Packaging.DOCKER_CLOUD_ESS;
-
-        final StringJoiner pluginsDescriptor = new StringJoiner("\n", "", "\n");
-        pluginsDescriptor.add("plugins:");
-        pluginsDescriptor.add("  - id: analysis-icu");
-        pluginsDescriptor.add("    location: file:///analysis-icu.zip");
-        if (isCloudImage) {
-            // The repository plugins have to be present, because (1) they are preinstalled, and (2) they
-            // are owned by `root` and can't be removed.
-            Stream.of("repository-s3", "repository-azure", "repository-gcs").forEach(plugin -> pluginsDescriptor.add("  - id: " + plugin));
-        }
-
+    public void test023InstallPluginUsingConfigFile() {
         final String filename = "elasticsearch-plugins.yml";
-        append(tempDir.resolve(filename), pluginsDescriptor.toString());
+        append(tempDir.resolve(filename), """
+            plugins:
+              - id: analysis-icu
+                location: file:///analysis-icu.zip
+            """);
 
         // Restart the container. This will sync the plugins automatically. Also
         // stuff the proxy settings with garbage, so any attempt to go out to the internet would fail. The
@@ -260,7 +230,7 @@ public class DockerTests extends PackagingTestCase {
                 .volume(Path.of(EXAMPLE_PLUGIN_PATH), "/analysis-icu.zip")
                 .envVar("ELASTIC_PASSWORD", PASSWORD)
                 .envVar(
-                    "ES_JAVA_OPTS",
+                    "CLI_JAVA_OPTS",
                     "-Dhttp.proxyHost=example.org -Dhttp.proxyPort=9999 -Dhttps.proxyHost=example.org -Dhttps.proxyPort=9999"
                 )
         );
@@ -274,21 +244,15 @@ public class DockerTests extends PackagingTestCase {
     /**
      * Checks that ESS images can manage plugins from the local archive by deploying a plugins config file.
      */
-    public void test025InstallPluginFromArchiveUsingConfigFile() {
+    public void test024InstallPluginFromArchiveUsingConfigFile() {
         assumeTrue("Only ESS image has a plugin archive", distribution().packaging == Packaging.DOCKER_CLOUD_ESS);
 
-        // The repository plugins have to be present, because (1) they are preinstalled, and (2) they
-        // are owned by `root` and can't be removed.
-        final String[] plugins = { "repository-s3", "repository-azure", "repository-gcs", "analysis-icu", "analysis-phonetic" };
-
-        final StringJoiner pluginsDescriptor = new StringJoiner("\n", "", "\n");
-        pluginsDescriptor.add("plugins:");
-        for (String plugin : plugins) {
-            pluginsDescriptor.add("  - id: " + plugin);
-        }
-
         final String filename = "elasticsearch-plugins.yml";
-        append(tempDir.resolve(filename), pluginsDescriptor.toString());
+        append(tempDir.resolve(filename), """
+            plugins:
+              - id: analysis-icu
+              - id: analysis-phonetic
+            """);
 
         // Restart the container. This will sync the plugins automatically. Also
         // stuff the proxy settings with garbage, so any attempt to go out to the internet would fail. The
@@ -298,7 +262,7 @@ public class DockerTests extends PackagingTestCase {
             builder().volume(tempDir.resolve(filename), installation.config.resolve(filename))
                 .envVar("ELASTIC_PASSWORD", PASSWORD)
                 .envVar(
-                    "ES_JAVA_OPTS",
+                    "CLI_JAVA_OPTS",
                     "-Dhttp.proxyHost=example.org -Dhttp.proxyPort=9999 -Dhttps.proxyHost=example.org -Dhttps.proxyPort=9999"
                 )
         );
@@ -306,46 +270,37 @@ public class DockerTests extends PackagingTestCase {
         // Since ES is doing the installing, give it a chance to complete
         waitForElasticsearch(installation, "elastic", PASSWORD);
 
-        assertThat("List of installed plugins is incorrect", listPlugins(), containsInAnyOrder(plugins));
+        assertThat("List of installed plugins is incorrect", listPlugins(), containsInAnyOrder("analysis-icu", "analysis-phonetic"));
     }
 
     /**
      * Check that when using Elasticsearch's plugins sync capability, it will use a proxy when configured to do so.
      * This could either be in the plugins config file, or via the standard Java system properties.
      */
-    public void test024SyncPluginsUsingProxy() {
+    public void test025SyncPluginsUsingProxy() {
         MockServer.withMockServer(mockServer -> {
             for (boolean useConfigFile : List.of(true, false)) {
                 mockServer.clearExpectations();
 
-                final StringJoiner config = new StringJoiner("\n", "", "\n");
-                config.add("plugins:");
-                // The repository plugins have to be present for Cloud images, because (1) they are preinstalled, and (2) they
-                // are owned by `root` and can't be removed.
-                if (distribution().packaging == Packaging.DOCKER_CLOUD || distribution().packaging == Packaging.DOCKER_CLOUD_ESS) {
-                    for (String plugin : List.of("repository-s3", "repository-azure", "repository-gcs", "analysis-icu")) {
-                        config.add("  - id: " + plugin);
-                    }
-                }
-                // This is the new plugin to install. We don't use an official plugin because then Elasticsearch
-                // will attempt an SSL connection and that just makes everything more complicated.
-                config.add("  - id: my-plugin");
-                config.add("    location: http://example.com/my-plugin.zip");
-
-                if (useConfigFile) {
-                    config.add("proxy: mockserver:" + mockServer.getPort());
-                }
+                final String config = """
+                    plugins:
+                        # This is the new plugin to install. We don't use an official plugin because then Elasticsearch
+                        # will attempt an SSL connection and that just makes everything more complicated.
+                      - id: my-plugin
+                        location: http://example.com/my-plugin.zip
+                    %s
+                    """.formatted(useConfigFile ? "proxy: mockserver:" + mockServer.getPort() : "");
 
                 final String filename = "elasticsearch-plugins.yml";
                 final Path pluginsConfigPath = tempDir.resolve(filename);
                 deleteIfExists(pluginsConfigPath);
-                append(pluginsConfigPath, config.toString());
+                append(pluginsConfigPath, config);
 
                 final DockerRun builder = builder().volume(pluginsConfigPath, installation.config.resolve(filename))
                     .extraArgs("--link " + mockServer.getContainerId() + ":mockserver");
 
                 if (useConfigFile == false) {
-                    builder.envVar("ES_JAVA_OPTS", "-Dhttp.proxyHost=mockserver -Dhttp.proxyPort=" + mockServer.getPort());
+                    builder.envVar("CLI_JAVA_OPTS", "-Dhttp.proxyHost=mockserver -Dhttp.proxyPort=" + mockServer.getPort());
                 }
 
                 // Restart the container. This will sync plugins automatically, which will fail because
@@ -354,7 +309,7 @@ public class DockerTests extends PackagingTestCase {
 
                 final List<Map<String, String>> interactions = mockServer.getInteractions();
 
-                assertThat(result.stderr, containsString("FileNotFoundException: http://example.com/my-plugin.zip"));
+                assertThat(result.stderr(), containsString("FileNotFoundException: http://example.com/my-plugin.zip"));
 
                 // Now check that Elasticsearch did use the proxy server
                 assertThat(interactions, hasSize(1));
@@ -368,15 +323,63 @@ public class DockerTests extends PackagingTestCase {
     }
 
     /**
+     * Check that attempting to install the repository plugins that have been migrated to modules succeeds, but does nothing.
+     */
+    public void test026InstallBundledRepositoryPlugins() {
+        assertThat("Expected no plugins to be installed", listPlugins(), is(empty()));
+
+        installation.executables().pluginTool.run("install repository-azure repository-gcs repository-s3");
+
+        assertThat("Still expected no plugins to be installed", listPlugins(), is(empty()));
+
+        // Removal should also succeed
+        installation.executables().pluginTool.run("remove repository-azure repository-gcs repository-s3");
+    }
+
+    /**
+     * Check that attempting to install the repository plugins that have been migrated to modules succeeds
+     * when using a plugins config file but does nothing.
+     */
+    public void test026InstallBundledRepositoryPluginsViaConfigFile() {
+        final String filename = "elasticsearch-plugins.yml";
+        append(tempDir.resolve(filename), """
+            plugins:
+              - id: repository-azure
+              - id: repository-gcs
+              - id: repository-s3
+            """);
+
+        // Restart the container. This will sync the plugins automatically. Also
+        // stuff the proxy settings with garbage, so any attempt to go out to the internet would fail. The
+        // sync shouldn't be doing anything anyway.
+        runContainer(
+            distribution(),
+            builder().volume(tempDir.resolve(filename), installation.config.resolve(filename))
+                .envVar("ELASTIC_PASSWORD", PASSWORD)
+                .envVar(
+                    "CLI_JAVA_OPTS",
+                    "-Dhttp.proxyHost=example.org -Dhttp.proxyPort=9999 -Dhttps.proxyHost=example.org -Dhttps.proxyPort=9999"
+                )
+        );
+
+        // Since ES is doing the installing, give it a chance to complete
+        waitForElasticsearch(installation, "elastic", PASSWORD);
+
+        assertThat("Expected no plugins to be installed", listPlugins(), is(empty()));
+    }
+
+    /**
      * Check that the JDK's `cacerts` file is a symlink to the copy provided by the operating system.
      */
     public void test040JavaUsesTheOsProvidedKeystore() {
-        final String path = sh.run("realpath jdk/lib/security/cacerts").stdout;
+        final String path = sh.run("realpath jdk/lib/security/cacerts").stdout();
 
         if (distribution.packaging == Packaging.DOCKER_UBI || distribution.packaging == Packaging.DOCKER_IRON_BANK) {
+            // In these images, the `cacerts` file ought to be a symlink here
             assertThat(path, equalTo("/etc/pki/ca-trust/extracted/java/cacerts"));
         } else {
-            assertThat(path, equalTo("/etc/ssl/certs/java/cacerts"));
+            // Whereas on other images, it's a real file so the real path is the same
+            assertThat(path, equalTo("/usr/share/elasticsearch/jdk/lib/security/cacerts"));
         }
     }
 
@@ -384,12 +387,10 @@ public class DockerTests extends PackagingTestCase {
      * Checks that there are Amazon trusted certificates in the cacaerts keystore.
      */
     public void test041AmazonCaCertsAreInTheKeystore() {
-        final String caName = distribution.packaging == Packaging.DOCKER_UBI || distribution.packaging == Packaging.DOCKER_IRON_BANK
-            ? "amazonrootca"
-            : "amazon_root_ca";
-
-        final boolean matches = sh.run("jdk/bin/keytool -cacerts -storepass changeit -list | grep trustedCertEntry").stdout.lines()
-            .anyMatch(line -> line.contains(caName));
+        final boolean matches = sh.run("jdk/bin/keytool -cacerts -storepass changeit -list | grep trustedCertEntry")
+            .stdout()
+            .lines()
+            .anyMatch(line -> line.contains("amazonrootca"));
 
         assertTrue("Expected Amazon trusted cert in cacerts", matches);
     }
@@ -422,7 +423,7 @@ public class DockerTests extends PackagingTestCase {
         copyFromContainer(installation.config("elasticsearch.yml"), tempDir.resolve("elasticsearch.yml"));
         copyFromContainer(installation.config("elasticsearch.keystore"), tempDir.resolve("elasticsearch.keystore"));
         copyFromContainer(installation.config("log4j2.properties"), tempDir.resolve("log4j2.properties"));
-        final Path autoConfigurationDir = findInContainer(installation.config, "d", "\"tls_auto_config_*\"");
+        final Path autoConfigurationDir = findInContainer(installation.config, "d", "\"certs\"");
         final String autoConfigurationDirName = autoConfigurationDir.getFileName().toString();
         copyFromContainer(autoConfigurationDir, tempDir.resolve(autoConfigurationDirName));
 
@@ -441,11 +442,15 @@ public class DockerTests extends PackagingTestCase {
         Files.setPosixFilePermissions(tempDir.resolve(autoConfigurationDirName), p750);
 
         // Restart the container
+        // We need to set discovery to single-node as autoconfiguration has already run when the node started the first time
+        // cluster.initial_master_nodes is set to the name of the original docker container
+        ServerUtils.removeSettingFromExistingConfiguration(tempDir, "cluster.initial_master_nodes");
         runContainer(
             distribution(),
             builder().volume(tempDir, "/usr/share/elasticsearch/config")
                 .envVar("ES_JAVA_OPTS", "-XX:-UseCompressedOops")
                 .envVar("ELASTIC_PASSWORD", PASSWORD)
+                .envVar("discovery.type", "single-node")
         );
 
         waitForElasticsearch(installation, "elastic", PASSWORD);
@@ -514,7 +519,7 @@ public class DockerTests extends PackagingTestCase {
         copyFromContainer(installation.config("jvm.options"), tempEsConfigDir);
         copyFromContainer(installation.config("elasticsearch.keystore"), tempEsConfigDir);
         copyFromContainer(installation.config("log4j2.properties"), tempEsConfigDir);
-        final Path autoConfigurationDir = findInContainer(installation.config, "d", "\"tls_auto_config_*\"");
+        final Path autoConfigurationDir = findInContainer(installation.config, "d", "\"certs\"");
         assertThat(autoConfigurationDir, notNullValue());
         final String autoConfigurationDirName = autoConfigurationDir.getFileName().toString();
         copyFromContainer(autoConfigurationDir, tempEsConfigDir.resolve(autoConfigurationDirName));
@@ -525,6 +530,9 @@ public class DockerTests extends PackagingTestCase {
 
         try {
             // Restart the container
+            // We need to set discovery to single-node as autoconfiguration has already run when the node started the first time
+            // cluster.initial_master_nodes is set to the name of the original docker container
+            ServerUtils.removeSettingFromExistingConfiguration(tempEsConfigDir, "cluster.initial_master_nodes");
             runContainer(
                 distribution(),
                 builder().envVar("ELASTIC_PASSWORD", PASSWORD)
@@ -532,6 +540,7 @@ public class DockerTests extends PackagingTestCase {
                     .volume(tempEsDataDir.toAbsolutePath(), installation.data)
                     .volume(tempEsConfigDir.toAbsolutePath(), installation.config)
                     .volume(tempEsLogsDir.toAbsolutePath(), installation.logs)
+                    .envVar("discovery.type", "single-node")
             );
 
             waitForElasticsearch(installation, "elastic", PASSWORD);
@@ -549,7 +558,12 @@ public class DockerTests extends PackagingTestCase {
      */
     public void test073RunEsAsDifferentUserAndGroupWithoutBindMounting() {
         // Restart the container
-        runContainer(distribution(), builder().extraArgs("--group-add 0").uid(501, 501).envVar("ELASTIC_PASSWORD", PASSWORD));
+        // We need to set discovery to single-node as autoconfiguration won't run, and we won't set
+        // cluster.initial_master_nodes
+        runContainer(
+            distribution(),
+            builder().extraArgs("--group-add 0").uid(501, 501).envVar("ELASTIC_PASSWORD", PASSWORD).envVar("discovery.type", "single-node")
+        );
 
         waitForElasticsearch(installation, "elastic", PASSWORD);
     }
@@ -649,7 +663,7 @@ public class DockerTests extends PackagingTestCase {
         );
 
         assertThat(
-            dockerLogs.stderr,
+            dockerLogs.stderr(),
             containsString("ERROR: Both ELASTIC_PASSWORD_FILE and ELASTIC_PASSWORD are set. These are mutually exclusive.")
         );
     }
@@ -673,7 +687,7 @@ public class DockerTests extends PackagingTestCase {
         );
 
         assertThat(
-            dockerLogs.stderr,
+            dockerLogs.stderr(),
             containsString(
                 "ERROR: File /run/secrets/" + passwordFilename + " from ELASTIC_PASSWORD_FILE must have file permissions 400 or 600"
             )
@@ -709,7 +723,7 @@ public class DockerTests extends PackagingTestCase {
         );
 
         assertThat(
-            dockerLogs.stderr,
+            dockerLogs.stderr(),
             containsString(
                 "ERROR: File "
                     + passwordFilename
@@ -724,7 +738,7 @@ public class DockerTests extends PackagingTestCase {
      * Check that environment variables are translated to -E options even for commands invoked under
      * `docker exec`, where the Docker image's entrypoint is not executed.
      */
-    public void test085EnvironmentVariablesAreRespectedUnderDockerExec() throws Exception {
+    public void test085EnvironmentVariablesAreRespectedUnderDockerExec() {
         installation = runContainer(distribution(), builder().envVar("ELASTIC_PASSWORD", "hunter2"));
 
         // The tool below requires a keystore, so ensure that ES is fully initialised before proceeding.
@@ -736,81 +750,7 @@ public class DockerTests extends PackagingTestCase {
         final Result result = sh.runIgnoreExitCode("bash -c 'echo y | elasticsearch-setup-passwords auto'");
 
         assertFalse("elasticsearch-setup-passwords command should have failed", result.isSuccess());
-        assertThat(result.stdout, containsString("java.net.UnknownHostException: this.is.not.valid"));
-    }
-
-    /**
-     * Check that settings are applied when they are supplied as environment variables with names that are:
-     * <ul>
-     *     <li>Prefixed with {@code ES_SETTING_}</li>
-     *     <li>All uppercase</li>
-     *     <li>Dots (periods) are converted to underscores</li>
-     *     <li>Underscores in setting names are escaped by doubling them</li>
-     * </ul>
-     */
-    public void test086EnvironmentVariablesInSnakeCaseAreTranslated() {
-        // Note the double-underscore in the var name here, which retains the underscore in translation
-        installation = runContainer(distribution(), builder().envVar("ES_SETTING_XPACK_SECURITY_FIPS__MODE_ENABLED", "false"));
-
-        final Optional<String> commandLine = sh.run("bash -c 'COLUMNS=2000 ps ax'").stdout.lines()
-            .filter(line -> line.contains("org.elasticsearch.bootstrap.Elasticsearch"))
-            .findFirst();
-
-        assertThat(commandLine.isPresent(), equalTo(true));
-
-        assertThat(commandLine.get(), containsString("-Expack.security.fips_mode.enabled=false"));
-    }
-
-    /**
-     * Check that environment variables that do not match the criteria for translation to settings are ignored.
-     */
-    public void test087EnvironmentVariablesInIncorrectFormatAreIgnored() {
-        installation = runContainer(
-            distribution(),
-            builder()
-                // No ES_SETTING_ prefix
-                .envVar("XPACK_SECURITY_FIPS__MODE_ENABLED", "false")
-                // Incomplete prefix
-                .envVar("ES_XPACK_SECURITY_FIPS__MODE_ENABLED", "false")
-                // Not underscore-separated
-                .envVar("ES.SETTING.XPACK.SECURITY.FIPS_MODE.ENABLED", "false")
-                // Not uppercase
-                .envVar("es_setting_xpack_security_fips__mode_enabled", "false")
-        );
-
-        final Optional<String> commandLine = sh.run("bash -c 'COLUMNS=2000 ps ax'").stdout.lines()
-            .filter(line -> line.contains("org.elasticsearch.bootstrap.Elasticsearch"))
-            .findFirst();
-
-        assertThat(commandLine.isPresent(), equalTo(true));
-
-        assertThat(commandLine.get(), not(containsString("-Expack.security.fips_mode.enabled=false")));
-    }
-
-    /**
-     * Check that settings are applied when they are supplied as environment variables with names that:
-     * <ul>
-     *     <li>Consist only of lowercase letters, numbers, underscores and hyphens</li>
-     *     <li>Separated by periods</li>
-     * </ul>
-     */
-    public void test088EnvironmentVariablesInDottedFormatArePassedThrough() {
-        // Note the double-underscore in the var name here, which retains the underscore in translation
-        installation = runContainer(
-            distribution(),
-            builder().envVar("xpack.security.fips_mode.enabled", "false").envVar("http.cors.allow-methods", "GET")
-        );
-
-        final Optional<String> commandLine = sh.run("bash -c 'COLUMNS=2000 ps ax'").stdout.lines()
-            .filter(line -> line.contains("org.elasticsearch.bootstrap.Elasticsearch"))
-            .findFirst();
-
-        assertThat(commandLine.isPresent(), equalTo(true));
-
-        assertThat(
-            commandLine.get(),
-            allOf(containsString("-Expack.security.fips_mode.enabled=false"), containsString("-Ehttp.cors.allow-methods=GET"))
-        );
+        assertThat(result.stdout(), containsString("java.net.UnknownHostException: this.is.not.valid"));
     }
 
     /**
@@ -825,12 +765,12 @@ public class DockerTests extends PackagingTestCase {
         assertTrue(existsInContainer(securityCli));
 
         Result result = sh.run(bin.certutilTool + " --help");
-        assertThat(result.stdout, containsString("Simplifies certificate creation for use with the Elastic Stack"));
+        assertThat(result.stdout(), containsString("Simplifies certificate creation for use with the Elastic Stack"));
 
         // Ensure that the exit code from the java command is passed back up through the shell script
         result = sh.runIgnoreExitCode(bin.certutilTool + " invalid-command");
         assertThat(result.isSuccess(), is(false));
-        assertThat(result.stdout, containsString("Unknown command [invalid-command]"));
+        assertThat(result.stdout(), containsString("Unknown command [invalid-command]"));
     }
 
     /**
@@ -840,7 +780,7 @@ public class DockerTests extends PackagingTestCase {
         final Installation.Executables bin = installation.executables();
 
         final Result result = sh.run(bin.shardTool + " -h");
-        assertThat(result.stdout, containsString("A CLI tool to remove corrupted parts of unrecoverable shards"));
+        assertThat(result.stdout(), containsString("A CLI tool to remove corrupted parts of unrecoverable shards"));
     }
 
     /**
@@ -852,7 +792,7 @@ public class DockerTests extends PackagingTestCase {
         final Result result = sh.run(bin.nodeTool + " -h");
         assertThat(
             "Failed to find expected message about the elasticsearch-node CLI tool",
-            result.stdout,
+            result.stdout(),
             containsString("A CLI tool to do unsafe cluster and index manipulations on current node")
         );
     }
@@ -877,7 +817,7 @@ public class DockerTests extends PackagingTestCase {
         final Shell localSh = new Shell();
         final String findResults = localSh.run(
             "docker run --rm --tty " + DockerRun.getImageName(distribution) + " bash -c ' touch data/test && find . \\! -group 0 ' "
-        ).stdout;
+        ).stdout();
 
         assertThat("Found some files whose GID != 0", findResults, is(emptyString()));
     }
@@ -958,8 +898,8 @@ public class DockerTests extends PackagingTestCase {
         waitForElasticsearch(installation, "elastic", PASSWORD);
         final Result containerLogs = getContainerLogs();
 
-        assertThat("Container logs should contain full class names", containerLogs.stdout, containsString("org.elasticsearch.node.Node"));
-        assertThat("Container logs don't contain INFO level messages", containerLogs.stdout, containsString("INFO"));
+        assertThat("Container logs should contain full class names", containerLogs.stdout(), containsString("org.elasticsearch.node.Node"));
+        assertThat("Container logs don't contain INFO level messages", containerLogs.stdout(), containsString("INFO"));
     }
 
     /**
@@ -971,7 +911,7 @@ public class DockerTests extends PackagingTestCase {
         waitForElasticsearch(installation, "elastic", PASSWORD);
 
         final Result containerLogs = getContainerLogs();
-        final List<String> stdout = containerLogs.stdout.lines().collect(Collectors.toList());
+        final List<String> stdout = containerLogs.stdout().lines().toList();
         // We select to look for a line near the beginning so that we don't stumble upon the stdout printing of auto-configured credentials
         assertThat("Container logs should be formatted using the stack config", stdout.get(10), matchesPattern("^\\[\\d\\d\\d\\d-.*"));
         assertThat("[logs/docker-cluster.log] should exist but it doesn't", existsInContainer("logs/docker-cluster.log"), is(true));
@@ -986,7 +926,7 @@ public class DockerTests extends PackagingTestCase {
         waitForElasticsearch(installation, "elastic", PASSWORD);
 
         final Result containerLogs = getContainerLogs();
-        final List<String> stdout = containerLogs.stdout.lines().collect(Collectors.toList());
+        final List<String> stdout = containerLogs.stdout().lines().toList();
         // We select to look for a line near the beginning so that we don't stumble upon the stdout printing of auto-configured credentials
         assertThat("Container logs should be formatted using the docker config", stdout.get(10), startsWith("{\""));
         assertThat("[logs/docker-cluster.log] shouldn't exist but it does", existsInContainer("logs/docker-cluster.log"), is(false));
@@ -998,7 +938,7 @@ public class DockerTests extends PackagingTestCase {
     public void test123CannotUseUnknownLoggingConfig() {
         final Result result = runContainerExpectingFailure(distribution(), builder().envVar("ES_LOG_STYLE", "unknown"));
 
-        assertThat(result.stderr, containsString("ERROR: ES_LOG_STYLE set to [unknown]. Expected [console] or [file]"));
+        assertThat(result.stderr(), containsString("ERROR: ES_LOG_STYLE set to [unknown]. Expected [console] or [file]"));
     }
 
     /**
@@ -1019,13 +959,16 @@ public class DockerTests extends PackagingTestCase {
      * Check that the Java process running inside the container has the expected UID, GID and username.
      */
     public void test130JavaHasCorrectOwnership() {
-        final ProcessInfo info = ProcessInfo.getProcessInfo(sh, "java");
+        final List<ProcessInfo> infos = ProcessInfo.getProcessInfo(sh, "java");
+        assertThat(infos, hasSize(2));
 
-        assertThat("Incorrect UID", info.uid, equalTo(1000));
-        assertThat("Incorrect username", info.username, equalTo("elasticsearch"));
+        for (ProcessInfo info : infos) {
+            assertThat("Incorrect UID", info.uid(), equalTo(1000));
+            assertThat("Incorrect username", info.username(), equalTo("elasticsearch"));
 
-        assertThat("Incorrect GID", info.gid, equalTo(0));
-        assertThat("Incorrect group", info.group, equalTo("root"));
+            assertThat("Incorrect GID", info.gid(), equalTo(0));
+            assertThat("Incorrect group", info.group(), equalTo("root"));
+        }
     }
 
     /**
@@ -1033,15 +976,17 @@ public class DockerTests extends PackagingTestCase {
      * The PID is particularly important because PID 1 handles signal forwarding and child reaping.
      */
     public void test131InitProcessHasCorrectPID() {
-        final ProcessInfo info = ProcessInfo.getProcessInfo(sh, "tini");
+        final List<ProcessInfo> infos = ProcessInfo.getProcessInfo(sh, "tini");
+        assertThat(infos, hasSize(1));
+        ProcessInfo info = infos.get(0);
 
-        assertThat("Incorrect PID", info.pid, equalTo(1));
+        assertThat("Incorrect PID", info.pid(), equalTo(1));
 
-        assertThat("Incorrect UID", info.uid, equalTo(1000));
-        assertThat("Incorrect username", info.username, equalTo("elasticsearch"));
+        assertThat("Incorrect UID", info.uid(), equalTo(1000));
+        assertThat("Incorrect username", info.username(), equalTo("elasticsearch"));
 
-        assertThat("Incorrect GID", info.gid, equalTo(0));
-        assertThat("Incorrect group", info.group, equalTo("root"));
+        assertThat("Incorrect GID", info.gid(), equalTo(0));
+        assertThat("Incorrect group", info.group(), equalTo("root"));
     }
 
     /**
@@ -1111,7 +1056,8 @@ public class DockerTests extends PackagingTestCase {
 
         // Grab the container output and find the line where it print the JVM arguments. This will
         // let us see what the automatic heap sizing calculated.
-        final Optional<String> jvmArgumentsLine = getContainerLogs().stdout.lines()
+        final Optional<String> jvmArgumentsLine = getContainerLogs().stdout()
+            .lines()
             .filter(line -> line.contains("JVM arguments"))
             .findFirst();
         assertThat("Failed to find jvmArguments in container logs", jvmArgumentsLine.isPresent(), is(true));
@@ -1138,17 +1084,47 @@ public class DockerTests extends PackagingTestCase {
     }
 
     /**
+     * Ensure that the default shell in the image is {@code bash}, since some alternatives e.g. {@code dash}
+     * are stricter about environment variable names.
+     */
+    public void test170DefaultShellIsBash() {
+        final Result result = DockerShell.executeCommand("/bin/sh", "-c", "echo $SHELL");
+        if (result.isSuccess()) {
+            assertThat(result.stdout(), equalTo("/bin/bash"));
+        } else {
+            throw new RuntimeException("Command failed: " + result.stderr());
+        }
+    }
+
+    /**
+     * Ensure that it is possible to apply CLI options when running the image.
+     */
+    public void test171AdditionalCliOptionsAreForwarded() throws Exception {
+        assumeTrue(
+            "Does not apply to Cloud images, because they don't use the default entrypoint",
+            distribution.packaging != Packaging.DOCKER_CLOUD && distribution().packaging != Packaging.DOCKER_CLOUD_ESS
+        );
+
+        runContainer(distribution(), builder().runArgs("bin/elasticsearch", "-Ecluster.name=kimchy").envVar("ELASTIC_PASSWORD", PASSWORD));
+        waitForElasticsearch(installation, "elastic", PASSWORD);
+
+        final JsonNode node = getJson("/", "elastic", PASSWORD, ServerUtils.getCaCert(installation));
+
+        assertThat(node.get("cluster_name").textValue(), equalTo("kimchy"));
+    }
+
+    /**
      * Check that the UBI images has the correct license information in the correct place.
      */
     public void test200UbiImagesHaveLicenseDirectory() {
         assumeTrue(distribution.packaging == Packaging.DOCKER_UBI);
 
-        final String[] files = sh.run("find /licenses -type f").stdout.split("\n");
+        final String[] files = sh.run("find /licenses -type f").stdout().split("\n");
         assertThat(files, arrayContaining("/licenses/LICENSE"));
 
         // UBI image doesn't contain `diff`
-        final String ubiLicense = sh.run("cat /licenses/LICENSE").stdout;
-        final String distroLicense = sh.run("cat /usr/share/elasticsearch/LICENSE.txt").stdout;
+        final String ubiLicense = sh.run("cat /licenses/LICENSE").stdout();
+        final String distroLicense = sh.run("cat /usr/share/elasticsearch/LICENSE.txt").stdout();
         assertThat(ubiLicense, equalTo(distroLicense));
     }
 
@@ -1183,12 +1159,12 @@ public class DockerTests extends PackagingTestCase {
     public void test300IronBankImagesHaveLicenseDirectory() {
         assumeTrue(distribution.packaging == Packaging.DOCKER_IRON_BANK);
 
-        final String[] files = sh.run("find /licenses -type f").stdout.split("\n");
+        final String[] files = sh.run("find /licenses -type f").stdout().split("\n");
         assertThat(files, arrayContaining("/licenses/LICENSE", "/licenses/LICENSE.addendum"));
 
         // Image doesn't contain `diff`
-        final String ubiLicense = sh.run("cat /licenses/LICENSE").stdout;
-        final String distroLicense = sh.run("cat /usr/share/elasticsearch/LICENSE.txt").stdout;
+        final String ubiLicense = sh.run("cat /licenses/LICENSE").stdout();
+        final String distroLicense = sh.run("cat /usr/share/elasticsearch/LICENSE.txt").stdout();
         assertThat(ubiLicense, equalTo(distroLicense));
     }
 
@@ -1228,6 +1204,20 @@ public class DockerTests extends PackagingTestCase {
 
     private List<String> listPlugins() {
         final Installation.Executables bin = installation.executables();
-        return sh.run(bin.pluginTool + " list").stdout.lines().collect(Collectors.toList());
+        return sh.run(bin.pluginTool + " list").stdout().lines().collect(Collectors.toList());
+    }
+
+    /**
+     * Check that readiness listener works
+     */
+    public void test500Readiness() throws Exception {
+        assertFalse(readinessProbe(9399));
+        // Disabling security so we wait for green
+        installation = runContainer(
+            distribution(),
+            builder().envVar("readiness.port", "9399").envVar("xpack.security.enabled", "false").envVar("discovery.type", "single-node")
+        );
+        waitForElasticsearch(installation);
+        assertTrue(readinessProbe(9399));
     }
 }
