@@ -9,12 +9,11 @@ package org.elasticsearch.cluster.coordination;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.admin.cluster.node.hotthreads.NodesHotThreadsAction;
 import org.elasticsearch.action.admin.cluster.node.hotthreads.NodesHotThreadsRequest;
 import org.elasticsearch.action.admin.cluster.node.hotthreads.NodesHotThreadsResponse;
-import org.elasticsearch.client.Client;
+import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
@@ -33,9 +32,9 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.common.util.concurrent.ConcurrentCollections.newConcurrentMap;
+import static org.elasticsearch.core.Strings.format;
 
 /**
  * A publication can succeed and complete before all nodes have applied the published state and acknowledged it; however we need every node
@@ -98,14 +97,14 @@ public class LagDetector {
         final List<NodeAppliedStateTracker> laggingTrackers = appliedStateTrackersByNode.values()
             .stream()
             .filter(t -> t.appliedVersionLessThan(version))
-            .collect(Collectors.toList());
+            .toList();
 
         if (laggingTrackers.isEmpty()) {
             logger.trace("lag detection for version {} is unnecessary: {}", version, appliedStateTrackersByNode.values());
         } else {
             logger.debug("starting lag detector for version {}: {}", version, laggingTrackers);
 
-            threadPool.scheduleUnlessShuttingDown(clusterStateApplicationTimeout, Names.GENERIC, new Runnable() {
+            threadPool.scheduleUnlessShuttingDown(clusterStateApplicationTimeout, Names.CLUSTER_COORDINATION, new Runnable() {
                 @Override
                 public void run() {
                     laggingTrackers.forEach(t -> t.checkForLag(version));
@@ -237,9 +236,9 @@ public class LagDetector {
                     @Override
                     public void onFailure(Exception e) {
                         logger.debug(
-                            new ParameterizedMessage(
-                                "failed to get hot threads from node [{}] lagging at version {} "
-                                    + "despite commit of cluster state version [{}]",
+                            () -> format(
+                                "failed to get hot threads from node [%s] lagging at version %s "
+                                    + "despite commit of cluster state version [%s]",
                                 discoveryNode.descriptionWithoutAttributes(),
                                 appliedVersion,
                                 expectedVersion
