@@ -9,6 +9,7 @@
 package org.elasticsearch.index.mapper;
 
 import org.elasticsearch.common.Strings;
+import org.elasticsearch.index.fielddata.FieldDataContext;
 import org.elasticsearch.script.CompositeFieldScript;
 import org.elasticsearch.script.LongFieldScript;
 import org.elasticsearch.script.Script;
@@ -22,7 +23,6 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.containsString;
 
@@ -108,7 +108,7 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
 
         RuntimeField rf = mapperService.mappingLookup().getMapping().getRoot().getRuntimeField("obj");
         assertEquals("obj", rf.name());
-        Collection<MappedFieldType> mappedFieldTypes = rf.asMappedFieldTypes().collect(Collectors.toList());
+        Collection<MappedFieldType> mappedFieldTypes = rf.asMappedFieldTypes().toList();
         for (MappedFieldType mappedFieldType : mappedFieldTypes) {
             if (mappedFieldType.name().equals("obj.long-subfield")) {
                 assertSame(longSubfield, mappedFieldType);
@@ -155,11 +155,9 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
             b.endObject();
         }));
         assertEquals(
-            "{\"_doc\":{\"runtime\":{"
-                + "\"message\":{\"type\":\"composite\","
-                + "\"meta\":{\"test-meta\":\"value\"},"
-                + "\"script\":{\"source\":\"dummy\",\"lang\":\"painless\"},"
-                + "\"fields\":{\"response\":{\"type\":\"long\"}}}}}}",
+            """
+                {"_doc":{"runtime":{"message":{"type":"composite","meta":{"test-meta":"value"},\
+                "script":{"source":"dummy","lang":"painless"},"fields":{"response":{"type":"long"}}}}}}""",
             Strings.toString(mapperService.mappingLookup().getMapping())
         );
     }
@@ -266,16 +264,13 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
         RuntimeField rf = mapperService.mappingLookup().getMapping().getRoot().getRuntimeField("obj");
         assertEquals("obj", rf.name());
 
-        Collection<MappedFieldType> mappedFieldTypes = rf.asMappedFieldTypes().collect(Collectors.toList());
+        Collection<MappedFieldType> mappedFieldTypes = rf.asMappedFieldTypes().toList();
         assertEquals(1, mappedFieldTypes.size());
         assertSame(doubleSubField, mappedFieldTypes.iterator().next());
 
-        assertEquals(
-            "{\"obj\":{\"type\":\"composite\","
-                + "\"script\":{\"source\":\"dummy2\",\"lang\":\"painless\"},"
-                + "\"fields\":{\"double-subfield\":{\"type\":\"double\"}}}}",
-            Strings.toString(rf)
-        );
+        assertEquals("""
+            {"obj":{"type":"composite","script":{"source":"dummy2","lang":"painless"},\
+            "fields":{"double-subfield":{"type":"double"}}}}""", Strings.toString(rf));
     }
 
     public void testFieldDefinedTwiceWithSameName() throws IOException {
@@ -339,7 +334,9 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
         withLuceneIndex(mapperService, iw -> iw.addDocuments(Arrays.asList(doc1.rootDoc(), doc2.rootDoc())), reader -> {
             SearchLookup searchLookup = new SearchLookup(
                 mapperService::fieldType,
-                (mft, lookupSupplier) -> mft.fielddataBuilder("test", lookupSupplier).build(null, null)
+                (mft, lookupSupplier, fdo) -> mft.fielddataBuilder(
+                    new FieldDataContext("test", lookupSupplier, mapperService.mappingLookup()::sourcePaths, fdo)
+                ).build(null, null)
             );
 
             LeafSearchLookup leafSearchLookup = searchLookup.getLeafSearchLookup(reader.leaves().get(0));
@@ -418,10 +415,8 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
         assertNull(doc1.rootDoc().get("obj.long"));
         assertNotNull(doc1.rootDoc().get("obj.bool"));
 
-        assertEquals(
-            "{\"_doc\":{\"properties\":{\"obj\":{\"properties\":{\"bool\":{\"type\":\"boolean\"}}}}}}",
-            Strings.toString(doc1.dynamicMappingsUpdate())
-        );
+        assertEquals("""
+            {"_doc":{"properties":{"obj":{"properties":{"bool":{"type":"boolean"}}}}}}""", Strings.toString(doc1.dynamicMappingsUpdate()));
 
         MapperService mapperService2 = createMapperService(topMapping(b -> {
             b.field("dynamic", "runtime");
@@ -439,9 +434,7 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
         ParsedDocument doc2 = mapperService2.documentMapper().parse(source(b -> b.field("obj.long", 1L).field("obj.bool", true)));
         assertNull(doc2.rootDoc().get("obj.long"));
         assertNull(doc2.rootDoc().get("obj.bool"));
-        assertEquals(
-            "{\"_doc\":{\"dynamic\":\"runtime\",\"runtime\":{\"obj.bool\":{\"type\":\"boolean\"}}}}",
-            Strings.toString(doc2.dynamicMappingsUpdate())
-        );
+        assertEquals("""
+            {"_doc":{"dynamic":"runtime","runtime":{"obj.bool":{"type":"boolean"}}}}""", Strings.toString(doc2.dynamicMappingsUpdate()));
     }
 }
