@@ -29,7 +29,6 @@ import org.opensaml.xmlsec.crypto.XMLSigningUtil;
 import org.opensaml.xmlsec.signature.support.SignatureConstants;
 
 import java.io.ByteArrayOutputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -328,8 +327,8 @@ public class SamlAuthnRequestValidatorTests extends IdpSamlTestCase {
         return Base64.getEncoder().encodeToString(bytes);
     }
 
-    private String urlEncode(String param) throws UnsupportedEncodingException {
-        return URLEncoder.encode(param, StandardCharsets.UTF_8.name());
+    private String urlEncode(String param) {
+        return URLEncoder.encode(param, StandardCharsets.UTF_8);
     }
 
     private String deflateAndBase64Encode(SAMLObject message) throws Exception {
